--- a/src/components/projects/descriptions/style.module.scss
+++ b/src/components/projects/descriptions/style.module.scss
@@ -27,7 +27,7 @@
             }
             &:nth-of-type(2){
                 width: 40%;
-                font-size: 1vw;
+                font-size: 3vh;
                 font-weight: 700;
             }
         }
