--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,8 +1,8 @@
 .main{
     height: 60vw;
-    background-color: #0f0f0f;
-    margin-top: 100vh;
-    margin-bottom: 100vh;
+    background-color: #0f0f0f;  
+    // margin-top: 50vh;
+    // margin-bottom: 100vh;
     position: relative;
     display: flex;
     align-items: center;
